8009460: C2compiler crash in machnode::in_regmask(unsigned int)

7121140 may not correctly break the Allocate -> MemBarStoreStore link

Reviewed-by: kvn